--- a/style.css
+++ b/style.css
@@ -16,9 +16,28 @@ html {
 	background-color: red;
 }
 .sidebar {
-	background-color: blue;
+	background-color: #1992d4;
+	color: white;
 	grid-row: 1/3;
+	padding: 20px;
+	font-size: 30px;
+	font-weight: 800;
+}
+.side-element {
+	display: flex;
+	align-items: center;
+	margin: 15px 0;
+}
+.title {
+	margin-bottom: 50px;
+	margin-top: 0;
 }
 .main-content {
 	background-color: yellow;
+}
+svg {
+	height: 50px;
+	width: 50px;
+	fill: white;
+	margin-right: 15px;
 }
