--- a/style.css
+++ b/style.css
@@ -63,9 +63,28 @@ button {
 	margin-top: 0;
 }
 .main-content {
-	background-color: yellow;
 	background-color: #e2e8f0;
+	display: grid;
+	grid-template-columns: 2fr 1fr;
 }
+.projects {
+	padding: 15px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr repeat(3, 4fr);
+	gap: 15px;
+}
+.project {
+	background-color: white;
+	border-radius: 30px;
+	padding: 5px;
+	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
+h3 {
+	grid-row: 1;
+	grid-column: 1/-1;
+}
+
 svg {
 	height: 50px;
 	width: 50px;
@@ -76,5 +95,4 @@ svg {
 	fill: black;
 	height: 25px;
 	width: 25px;
-	/* margin: 5px 0 0 5px; */
 }
