--- a/style.css
+++ b/style.css
@@ -80,6 +80,14 @@ button {
 	padding: 5px;
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
+.announcements {
+	padding: 15px;
+}
+.announcements div {
+	background-color: white;
+	border-radius: 15px;
+	padding: 15px;
+}
 h3 {
 	grid-row: 1;
 	grid-column: 1/-1;
